[gd_scene load_steps=23 format=3 uid="uid://b4jtd8kp38ms7"]

[ext_resource type="Script" path="res://Scenes/Enemies/met_tool.gd" id="1_gvss6"]
[ext_resource type="Texture2D" uid="uid://3c23bqtimnpb" path="res://Sprites/Enemies/MetTool.png" id="1_lsk7f"]
[ext_resource type="PackedScene" uid="uid://by4cdpk5r2i60" path="res://Scenes/InheritanceScenes/hit_box_component.tscn" id="2_52bmo"]
[ext_resource type="PackedScene" uid="uid://u6hjnq4ludvc" path="res://Scenes/InheritanceScenes/hurt_box_component.tscn" id="3_f683f"]
[ext_resource type="PackedScene" uid="uid://dpjc7bv3tf8bu" path="res://OtherScenes/stats.tscn" id="4_km2x8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8o73q"]
atlas = ExtResource("1_lsk7f")
region = Rect2(84, 0, 21, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_6oh35"]
atlas = ExtResource("1_lsk7f")
region = Rect2(105, 0, 21, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v0kf"]
atlas = ExtResource("1_lsk7f")
region = Rect2(126, 0, 21, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_kj63r"]
atlas = ExtResource("1_lsk7f")
region = Rect2(126, 0, 21, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dj7x"]
atlas = ExtResource("1_lsk7f")
region = Rect2(126, 0, 21, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdfgb"]
atlas = ExtResource("1_lsk7f")
region = Rect2(105, 0, 21, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5tjm"]
atlas = ExtResource("1_lsk7f")
region = Rect2(84, 0, 21, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieigb"]
atlas = ExtResource("1_lsk7f")
region = Rect2(84, 0, 21, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbkxe"]
atlas = ExtResource("1_lsk7f")
region = Rect2(84, 0, 21, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttpiv"]
atlas = ExtResource("1_lsk7f")
region = Rect2(63, 0, 21, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm0qf"]
atlas = ExtResource("1_lsk7f")
region = Rect2(42, 0, 21, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko0gf"]
atlas = ExtResource("1_lsk7f")
region = Rect2(21, 0, 21, 15)

[sub_resource type="SpriteFrames" id="SpriteFrames_80kyo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o73q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6oh35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v0kf")
}],
"loop": false,
"name": &"Close",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kj63r")
}],
"loop": true,
"name": &"Close_P",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dj7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdfgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5tjm")
}],
"loop": false,
"name": &"Open",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieigb")
}],
"loop": true,
"name": &"Open_P",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbkxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttpiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm0qf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko0gf")
}],
"loop": true,
"name": &"Walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fu76b"]
size = Vector2(14, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_po10j"]
size = Vector2(14, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rgeu6"]
size = Vector2(12, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_4ay6l"]
radius = 59.0339

[node name="Met_Tool" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_gvss6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_80kyo")
animation = &"Close"
autoplay = "Close_P"
offset = Vector2(0, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, -5)
shape = SubResource("RectangleShape2D_fu76b")

[node name="HitBoxComponent" parent="." instance=ExtResource("2_52bmo")]
collision_layer = 4
collision_mask = 8
damage = 2

[node name="HitCollision" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(-1, -6.5)
shape = SubResource("RectangleShape2D_po10j")

[node name="HurtBoxComponent" parent="." instance=ExtResource("3_f683f")]

[node name="HurtCollision" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(-1, -5)
shape = SubResource("RectangleShape2D_rgeu6")

[node name="Stats" parent="." instance=ExtResource("4_km2x8")]
max_health = 6

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(10, -6)

[node name="PlayerFinder" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(56, 0)
collision_mask = 2

[node name="ActiveArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActiveArea"]
position = Vector2(-1, -6)
shape = SubResource("CircleShape2D_4ay6l")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
